--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
+* {
+  box-sizing: border-box;
+}
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  font-family: "Hachi Maru Pop", cursive;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 15px;
+}
+.App .Meta {
+  flex-grow: 1;
+  padding-right: 15px;
+}
+.App .Meta input {
+  font-family: inherit;
+  padding: 5px;
+  width: 100%;
+  border-radius: 5px;
+}
+.App .Meta button {
+  padding: 10px 15px;
+  font-family: inherit;
+  margin: 20px 0;
+  border-radius: 10px;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.App #certificateWrapper {
+  position: relative;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App #certificateWrapper p {
+  font-family: "Staatliches", cursive;
+  margin: 0;
+  position: absolute;
+  left: 150px;
+  text-align: center;
+  top: 330px;
+  font-size: 25pt;
 }
